# BowtieQGT

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: docs.yml
bowtie_qgt/: __init__.py  _version.py  bowtie_circuits.py  bowtieqgt.py
docs/: GENERATING_API_DOCS.md
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: bowtie_circuits.rst  bowtieqgt.rst
test/: conftest.py  test_bowtie_qgt.py  test_import.py
